# LearnCSharp

./: .codespell-ignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .vsconfig  AspNetStudyLabs.slnx  Directory.Build.props  Directory.Packages.props  LearnCSharp.CI.slnx  LearnCSharp.GenericTests.slnx  LearnCSharp.slnx  README.md  SECURITY.md  aspire.config.json
src/learncpp/: .editorconfig  CMakeLists.txt  CMakePresets.json  README.md
src/learncpp/cmake/: Cxx23Capabilities.cmake  Sanitizers.cmake
src/learncpp/docs/: reference-policy.md  topic-document-map.md
src/learncpp/docs/superpowers/plans/: 2026-07-06-learncpp-slnx.md
src/learncpp/docs/superpowers/specs/: 2026-07-06-learncpp-slnx-design.md
src/learncpp/include/learn/: example_support.hpp  topic_registry.hpp
src/learncpp/scripts/: generate-vs-filters.ps1  run-all-topics.ps1  run-strict-build-matrix.sh  validate-topic-catalog.ps1
src/learncpp/src/: main.cpp
src/learncpp/src/learn/: topic_registry.cpp
src/learncpp/src/part2_stage01_syntax_and_translation_model/section01_language_basics/: builtin_types_and_literals.cpp  comments.cpp  inline_namespace.cpp  iostream_basic_io.cpp  main_and_program_structure.cpp  namespaces.cpp
src/learncpp/src/part2_stage01_syntax_and_translation_model/section02_preprocessor_and_includes/: elifdef_cpp23.cpp  elifndef_cpp23.cpp  include_guard.cpp  include_text_substitution.cpp  pragma_once.cpp  warning_directive_cpp23.cpp
src/learncpp/src/part2_stage01_syntax_and_translation_model/section03_translation_model/: declaration_vs_definition.cpp  header_source_separation.cpp  one_definition_rule_intro.cpp  per_cpp_object_file_independence.cpp  preprocess_compile_assemble_link.cpp  translation_unit_concept.cpp  undefined_reference_diagnosis.cpp
src/learncpp/src/part2_stage02_type_system_value_category_deduction/section01_builtin_types_and_initialization/: auto_with_initialization.cpp  extended_floating_types_stdfloat_cpp23.cpp  fixed_width_integers_cstdint.cpp  integral_floating_bool_char.cpp  narrowing_check_with_braces.cpp  nullptr_replaces_null_zero.cpp  size_t_ptrdiff_literal_suffix_cpp23.cpp  uniform_brace_initialization.cpp
src/learncpp/src/part2_stage02_type_system_value_category_deduction/section02_initialization_taxonomy/: aggregate_initialization.cpp  braces_vs_parens_initializer_list_hijack.cpp  copy_initialization.cpp  default_initialization.cpp  direct_initialization.cpp  list_initialization.cpp  most_vexing_parse_and_brace_fix.cpp  uninitialized_read_is_ub.cpp  value_initialization.cpp  zero_initialization_static_thread_local.cpp
src/learncpp/src/part2_stage02_type_system_value_category_deduction/section03_const_constexpr_volatile/: const_qualifier_pointer_reference.cpp  constexpr_variable_intro.cpp  top_level_vs_low_level_const.cpp  volatile_is_not_thread_sync.cpp
src/learncpp/src/part2_stage02_type_system_value_category_deduction/section04_compound_types/: declaration_parsing.cpp  lvalue_reference.cpp  pointer_basics.cpp  rvalue_reference.cpp
src/learncpp/src/part2_stage02_type_system_value_category_deduction/section05_value_categories/: glvalue_and_rvalue.cpp  lvalue_xvalue_prvalue.cpp  prvalue_materialization_cpp17.cpp  simplified_implicit_move_cpp23.cpp
src/learncpp/src/part2_stage02_type_system_value_category_deduction/section06_type_deduction/: auto_decay_copy_cpp23.cpp  auto_deduces_decays.cpp  decltype_auto.cpp  decltype_basics.cpp  reference_collapsing.cpp  std_forward_deduction_basis.cpp  std_move_static_cast_to_rvalue.cpp  template_argument_deduction.cpp
src/learncpp/vs/: cpp_learn.vcxproj  cpp_learn.vcxproj.filters
(+2329 files in other folders)
